@@ -3,6 +3,7 @@ using Ermes.Dto;
 using Ermes.Dto.Datatable;
 using Ermes.Organizations.Dto;
 using Ermes.Profile.Dto;
+using System;
 using System.Threading.Tasks;
 
 namespace Profile
@@ -13,7 +14,7 @@ namespace Profile
         Task<GetProfileOutput> GetProfileById(IdInput<long> input);
         Task<UpdateProfileOutput> UpdateProfile(UpdateProfileInput input);
         //Task<bool> UpdatePreferredLanguages(UpdatePreferredLanguagesInput input);
-        Task<bool> DeleteProfile(IdInput<int> input);
+        Task<bool> DeleteProfile(IdInput<Guid> input);
         Task<bool> UpdateRegistrationToken(UpdateRegistrationTokenInput input);
         Task<DTResult<PersonDto>> GetOrganizationMembers(GetOrganizationMembersInput input);
         Task<DTResult<OrganizationDto>> GetOrganizations(GetOrganizationsInput input);
