@@ -14,8 +14,8 @@ namespace Ermes.Notifications
         protected IRepository<Notification, Guid> NotificationRepository { get; set; }
 
         public NotificationManager(
-        IRepository<Notification, Guid> notificationRepository
-    )
+            IRepository<Notification, Guid> notificationRepository
+        )
         {
             NotificationRepository = notificationRepository;
         }
@@ -23,6 +23,11 @@ namespace Ermes.Notifications
         public async Task<Guid> CreateNotificationAsync(Notification not)
         {
             return await NotificationRepository.InsertOrUpdateAndGetIdAsync(not);
+        }
+
+        public async Task DeleteNotificationsByPersonIdAsync(long personId)
+        {
+            await NotificationRepository.DeleteAsync(a => (a.ReceiverId.HasValue && a.ReceiverId.Value == personId) || (a.CreatorId.HasValue && a.CreatorId.Value == personId));
         }
     }
 }
