@@ -1,6 +1,7 @@
 Ver.
 --------------------------------
 - Feature - Added visibility restriction in GetUsers API
+- Feature - Delete profile API added (#109)
 
 Ver. 3.9.5 - 2022-09-29
 --------------------------------
